fix(launcher): give every install path the same JVM setup, and guard the pair
Onion starts through one of two independent launcher implementations -- the
`bin/` scripts, which the distribution zip ships and a source checkout runs, and
the ones `install.sh` writes for a `curl | sh` install -- and they had drifted.

The installed launchers had a class-data-sharing archive and the
`--sun-misc-unsafe-memory-access=allow` workaround. The `bin/` ones had neither.
So the same program took 0.73s from the zip and 0.38s from the installer (JDK 25,
`onion run/Hello.on`), and printed four lines of JVM deprecation warnings on every
single run in the first case and none in the second. Nothing failed, because
nothing was looking.

The `bin/` launchers now share one `bin/onion-jvm.sh` (and `onion-jvm.bat`) that
does both, and `install.sh` gains the two things it was missing:
`ONION_JAVA_OPTS` -- there was previously no way to set a heap size or attach an
agent short of hand-writing a `java -cp` command -- and `-Xshare:auto` with the
CDS log tags off, so a stale archive after a JDK upgrade costs the speedup and
not a warning on every run.

`LauncherParitySpec` fails the build if either implementation gains a capability
the other lacks. It earned its keep immediately: it caught the archive filename
disagreeing between the POSIX and Windows halves while they were being written.

The Unsafe workaround needs a JDK version check -- the option does not exist
before JDK 23, and an unknown `--` option makes the JVM refuse to start. The
version is read from the JDK's own `release` file rather than probed by running
`java`, which would add a process launch to every invocation. The Windows scripts
do not do this check yet and still show the warnings; that is recorded rather
than papered over.

Deliberately not changed: the JIT. `-XX:TieredStopAtLevel=1` measured faster on
every workload tried, including a four-billion-iteration loop where C1 beat C2 by
36% (5.39s -> 3.42s). That is evidence ab